<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupJoinMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivJoinMeeting, tilCodeJoinMeeting, btnJoinMeeting" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivCreateMeeting, tilCodeCreateMeeting, btnCreateMeeting" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/nav_icon_id"
                android:layout_width="87dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/navicon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <androidx.appcompat.widget.AppCompatImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/ClickableImageView"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_history" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#D50000"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivMeetingHistory"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_history"
                android:visibility="visible"
                style="@style/ClickableImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tgMeeting"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:layout_margin="15dp"
        android:orientation="vertical"

        android:gravity="center"
        app:checkedButton="@id/btnToggleJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnToggleJoinMeeting"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:backgroundTint="#00BFA5"
            android:layout_height="wrap_content"
            android:text="@string/main_join_meeting" />

        <Button
            android:id="@+id/btnToggleCreateMeeting"
            android:layout_margin="15dp"
            android:backgroundTint="#00BFA5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_create_meeting" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivJoinMeeting"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/tilCodeJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_meeting_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodeJoinMeeting"
        android:layout_width="344dp"
        android:layout_height="89dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/main_enter_meeting_code"
        app:counterEnabled="true"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivJoinMeeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodeJoinMeeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#00BFA5"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoinMeeting"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#000"
        android:text="@string/main_btn_join_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeJoinMeeting" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateMeeting"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/tilCodeCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_meeting_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodeCreateMeeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/main_meeting_code"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_baseline_link_24"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCreateMeeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodeCreateMeeting"
            android:layout_width="match_parent"
            android:backgroundTint="#00BFA5"
            android:textColorHint="#FFFFFF"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateMeeting"
        android:backgroundTint="#000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_btn_create_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeCreateMeeting" />
</androidx.constraintlayout.widget.ConstraintLayout>